...
    @IBOutlet weak var animationViewContainer: UIView!
    @IBOutlet weak var friendNameLabel: UILabel!
    @IBOutlet weak var friendNameLabelTop: NSLayoutConstraint!
    @IBOutlet weak var hangupButton: UIButton!
    
    public var friendImageName: String!
    public var friendName: String!
    
    private var animationView:LOTAnimationView?
    private var segueToAnswerVC = true
    private var playSound = true
    private var soundEffect: AVAudioPlayer?
    
...
        friendNameLabelTop.iPhoneXPriority(maxPriority: 1000, minPriority: 998)
        setupAnimationView()
        setupFriend(withFriendName:friendName, andFriendImage: UIImage(named:friendImageName)!)
        soundEffect = AVAudioPlayer(withResource:"tone-beep.wav", numberOfLoops:3)
        
        friendNameLabel.accessibilityIdentifier = "friendName"
        hangupButton.accessibilityIdentifier = "callingHangupButton"
    }
    
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
        
        view.addGradientLayer(colors: [
...
