...
        
        if !Platform.isSimulator { setupCameraView(withPosition: currentCamera) }
        
        let displayLink = CADisplayLink(target: self, selector: #selector(updateTimer))
        displayLink.add(to: .main, forMode: .default)
        
        callingLabel.accessibilityIdentifier = "callingFriendLabel"
        hangupButton.accessibilityIdentifier = "answeringHangupButton"
    }
    
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
        
        if !Platform.isSimulator { session?.startRunning() }
...
